@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-07T16:15:09Z",
+  "timestamp" : "2022-05-08T00:55:38Z",
   "count_outdated" : 263,
   "uniques_outdated" : 129,
-  "count" : 271,
-  "uniques" : 137,
+  "count" : 281,
+  "uniques" : 144,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -42,10 +42,10 @@
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 11,
+      "count_minmax": [ 1, 11 ],
+      "uniques": 8,
+      "uniques_minmax": [ 1, 8 ]
     }
   ]
 }
