@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 5,
+  "count": 18,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -29,8 +29,8 @@
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 11,
+      "uniques": 8
     }
   ]
 }
